--- a/pages/Index.pug
+++ b/pages/Index.pug
@@ -1,1 +1,13 @@
-include ../Common.blocks/Button/Button.pug
+include ../Common.blocks/Container/Container.pug
+doctype html
+html
+    head
+        title
+        meta(name='viewport' content='width=device-width, initial-scale=1')
+        meta(name='HandheldFriendly' content='true')
+        meta(name='MobileOptimazed' content='width')
+        meta(name='apple-mobile-web-app-capable' content='yes')
+    body
+
+
++Container('section')
