--- a/Common.blocks/Container/Container.pug
+++ b/Common.blocks/Container/Container.pug
@@ -1,2 +1,4 @@
-mixin Container(el)
-    #{el}.Container
+mixin Container(content)
+    section.Container #{content}
+        if block
+            block
