--- a/sds.pug
+++ b/sds.pug
@@ -18,3 +18,5 @@ html
                 +Logo()
             +Content()
                 +Content__WrapperLeft()
+            (class= cl1)(class= cl2)(class= cl3)(class= cl4)(class= cl5)(class= cl6)(class= cl7)(class= cl8)
+, cl1, cl2, cl3, cl4, cl5, cl6, cl7, cl8
