included fonts and added color description elements

--- a/Common.blocks/Content/__WrapperLeft/Content__WrapperLeft.scss
+++ b/Common.blocks/Content/__WrapperLeft/Content__WrapperLeft.scss
@@ -1,5 +1,4 @@
 .Content__WrapperLeft {
-  width: 269.26px;
-  height: 610px;
-  flex-direction: column;
+  display: flex;
+  flex-direction: row;
 }
