--- a/pages/index.pug
+++ b/pages/index.pug
@@ -23,42 +23,42 @@ html
         meta(name='MobileOptimazed' content='width')
 
     body
-        +Container()
+        +Container('', 'Container_BgColor_White Container_MarBot_50px')
             +LogoWrapper()
                 +Logo()
             +Content('', 'Content__Wrapper')
                 +Wrapper()
-                    +FigureHtml5()
+                    +FigureHtml5('', 'FigureHtml5_PdB_20px')
                         +FigureHtml5__Image('', 'FigureHtml5_Bg_Dsh100')
                         +FigureHtml5__FigcaptionWrapper()
                             +FigureHtml5__Figcaption('Dark Shade 100%')
                             +FigureHtml5__Figcaption('#1F2041', 'FigureHtml5_Fw_400 FigureHtml5_Ff_QuicksandRegular')
-                    +FigureHtml5()
+                    +FigureHtml5('', 'FigureHtml5_PdB_20px')
                         +FigureHtml5__Image('', 'FigureHtml5_Bg_Dsh75')
                         +FigureHtml5__FigcaptionWrapper()
                             +FigureHtml5__Figcaption('Dark Shade 75%')
                             +FigureHtml5__Figcaption('#1F2041', 'FigureHtml5_Fw_400 FigureHtml5_Ff_QuicksandRegular')
-                    +FigureHtml5()
+                    +FigureHtml5('', 'FigureHtml5_PdB_20px')
                         +FigureHtml5__Image('', 'FigureHtml5_Bg_Dsh50')
                         +FigureHtml5__FigcaptionWrapper()
                             +FigureHtml5__Figcaption('Dark Shade 50%')
                             +FigureHtml5__Figcaption('#1F2041', 'FigureHtml5_Fw_400 FigureHtml5_Ff_QuicksandRegular')
-                    +FigureHtml5()
+                    +FigureHtml5('', 'FigureHtml5_PdB_20px')
                         +FigureHtml5__Image('', 'FigureHtml5_Bg_Dsh25')
                         +FigureHtml5__FigcaptionWrapper()
                             +FigureHtml5__Figcaption('Dark Shade 25%')
                             +FigureHtml5__Figcaption('#1F2041', 'FigureHtml5_Fw_400 FigureHtml5_Ff_QuicksandRegular')
-                    +FigureHtml5()
+                    +FigureHtml5('', 'FigureHtml5_PdB_20px')
                         +FigureHtml5__Image('', 'FigureHtml5_Bg_Dsh05')
-                        +FigureHtml5__FigcaptionWrapper()
+                        +FigureHtml5__FigcaptionWrapper('', 'FigureHtml5_PdTop_correct')
                             +FigureHtml5__Figcaption('Dark Shade 5%')
                             +FigureHtml5__Figcaption('#1F2041', 'FigureHtml5_Fw_400 FigureHtml5_Ff_QuicksandRegular')
-                    +FigureHtml5()
+                    +FigureHtml5('', 'FigureHtml5_PdB_20px')
                         +FigureHtml5__Image('', 'FigureHtml5_Bg_Purple')
-                        +FigureHtml5__FigcaptionWrapper()
+                        +FigureHtml5__FigcaptionWrapper('', 'FigureHtml5_PdTop_correct')
                             +FigureHtml5__Figcaption('Purple')
                             +FigureHtml5__Figcaption('#BC9CFF', 'FigureHtml5_Fw_400 FigureHtml5_Ff_QuicksandRegular')
-                    +FigureHtml5()
+                    +FigureHtml5('', 'FigureHtml5_PdB_20px')
                         +FigureHtml5__Image('', 'FigureHtml5_Bg_Green')
                         +FigureHtml5__FigcaptionWrapper()
                             +FigureHtml5__Figcaption('Green')
@@ -75,6 +75,14 @@ html
                         +ExampleText__Text('This is a label or CTA text', 'ExampleText_FontStyle_H3 ExampleText_PdBot_Correct')
                     +ExampleText()
                         +ExampleText__Header('Body', 'ExampleText_FontSize_14px ExampleText_LineH_24')
-                        +ExampleText__Text('This is the body text which is used for most of the design, like paragraphs, lists, etc.', 'ExampleText_FontStyle_Body')
-
-
+                        +ExampleText__Text('This is the body text which is used for most of the design, like paragraphs, lists, etc.', 'ExampleText_FontStyle_Body ExampleText_PdR_34 ExampleText_Width_316px')
+        +Container('', 'Container_BgColor_White Container_MarBot_50px Container_Height_1853px')
+            +LogoWrapper()
+                +Logo()
+            +Content('', 'Content__Wrapper')
+                +Wrapper()
+                +Wrapper()
+                    +Wrapper()
+                        +Wrapper()
+                        +Wrapper()
+                    +Wrapper()
