--- a/Common.blocks/Base/Variables.scss
+++ b/Common.blocks/Base/Variables.scss
@@ -2,3 +2,7 @@ $ExampleText_FontSize_24px: 24px;
 $ExampleText_FontSize_19px: 19px;
 $ExampleText_FontSize_14px: 14px;
 $ExampleText_FontSize_12px: 12px;
+
+$DarkShade100: #1F2041;
+$DarkShade50: rgba(31, 32, 65, 0.5);
+$DarkShade25: rgba(31, 32, 65, 0.25);
