--- a/Common.blocks/ExampleText/ExampleText.scss
+++ b/Common.blocks/ExampleText/ExampleText.scss
@@ -1,6 +1,38 @@
-.ExampleText {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
+@media only screen  and (max-width: 576px) {
+  .ExampleText {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+@media only screen and (min-width: 577px) and (max-width: 767px) {
+  .ExampleText {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1439px) {
+  .ExampleText {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+}
+
+@media only screen and (min-width: 1440px) and (max-width: 1440px) {
+  .ExampleText {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+}
+
+@media only screen and (min-width: 1441px) and (max-width: 1920px) {
+  .ExampleText {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
 }
 
