--- a/Common.blocks/ExampleText/__Header/ExampleText__Header.scss
+++ b/Common.blocks/ExampleText/__Header/ExampleText__Header.scss
@@ -1,7 +1,52 @@
-.ExampleText__Header {
-  font-family: 'Montserrat-Regular';
-  font-style: normal;
-  font-weight: normal;
-  text-align: right;
-  color: rgba(31, 32, 65, 0.25);
+@media only screen  and (max-width: 576px) {
+  .ExampleText__Header {
+    font-family: 'Montserrat-Regular';
+    font-style: normal;
+    font-weight: normal;
+    text-align: right;
+    color: rgba(31, 32, 65, 0.25);
+    width: 40px;
+  }
 }
+
+@media only screen and (min-width: 577px) and (max-width: 767px) {
+  .ExampleText__Header {
+    font-family: 'Montserrat-Regular';
+    font-style: normal;
+    font-weight: normal;
+    text-align: right;
+    color: rgba(31, 32, 65, 0.25);
+    width: 40px;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1439px) {
+  .ExampleText__Header {
+    font-family: 'Montserrat-Regular';
+    font-style: normal;
+    font-weight: normal;
+    text-align: right;
+    color: rgba(31, 32, 65, 0.25);
+  }
+}
+
+@media only screen and (min-width: 1440px) and (max-width: 1440px) {
+  .ExampleText__Header {
+    font-family: 'Montserrat-Regular';
+    font-style: normal;
+    font-weight: normal;
+    text-align: right;
+    color: rgba(31, 32, 65, 0.25);
+  }
+}
+
+@media only screen and (min-width: 1441px) and (max-width: 1920px) {
+  .ExampleText__Header {
+    font-family: 'Montserrat-Regular';
+    font-style: normal;
+    font-weight: normal;
+    text-align: right;
+    color: rgba(31, 32, 65, 0.25);
+  }
+}
+
