--- a/Common.blocks/InputBlock/__FieldName/InputBlock__FieldName.scss
+++ b/Common.blocks/InputBlock/__FieldName/InputBlock__FieldName.scss
@@ -29,7 +29,8 @@
   font-weight: bold;
   font-size: 12px;
   line-height: 15px;
-  padding-top: 2px;
+  padding-left: 1px;
+  padding-top: 4px;
   /* identical to box height */
   text-transform: uppercase;
   color: $DarkShade100;
