--- a/Common.blocks/InputBlock/__InputField/InputBlock__InputField.scss
+++ b/Common.blocks/InputBlock/__InputField/InputBlock__InputField.scss
@@ -24,8 +24,10 @@
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
  .InputBlock__InputField {
-  border: 1px solid $DarkShade25;
+  box-shadow: none;
+  border: none;
   box-sizing: border-box;
+  border: 1px solid $DarkShade25;
   border-radius: 4px;
   width: 320px;
   height: 44px;
@@ -37,8 +39,16 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 18px;
-  margin-bottom: 20px;
+  margin-bottom: 18px;
   letter-spacing: -0.2px;
+  &:after {
+   border: none;
+   box-shadow: none;
+  }
+  &:before {
+   border: none;
+   box-shadow: none
+  }
  }
 }
 
