added select field

--- a/pages/index.pug
+++ b/pages/index.pug
@@ -97,17 +97,18 @@ html
                     +InputBlock()
                         +InputBlock__Wrapper()
                             +InputBlock__FieldName('text field')
-                            +InputBlock__FieldDescription('HOVER  /FOCUS')
+                            +InputBlock__FieldDescription('HOVER  /FOCUS')(class='InputBlock_PdTop_3px')
                         +InputBlock__InputField('InputBlock__InputField InputBlock_BrColor_DrSh50', 'text', 'This is pretty awesome')
                     +InputBlock()
                         +InputBlock__Wrapper()
                             +InputBlock__FieldName('dropdown')
-                            +InputBlock__FieldDescription('default')
-                        +InputBlock__InputField('InputBlock__InputField', 'text', 'This is pretty awesome')
+                            +InputBlock__FieldDescription('default')(class='InputBlock_PdTop_3px')
+                        select.InputBlock__InputField
+                            option(selected) Сколько гостей
                     +InputBlock()
                         +InputBlock__Wrapper()
                             +InputBlock__FieldName('masked text field')
-                            +InputBlock__FieldDescription('default')
+                            +InputBlock__FieldDescription('default')(class='InputBlock_PdTop_4px')
                         +InputBlock__InputField('InputBlock__InputField', 'text', 'This is pretty awesome')
                 +Wrapper()
                     +Wrapper()
