added date dropdown

--- a/Common.blocks/InputBlock/__Select/InputBlock__Select.pug
+++ b/Common.blocks/InputBlock/__Select/InputBlock__Select.pug
@@ -1,8 +1,7 @@
 mixin InputBlock__Select()
-        select.InputBlock__Select&attributes(attributes)
-            option(selected) Сколько гостей
-            option() Сколько гостей
-            option() Сколько гостей
+    select.InputBlock__Select&attributes(attributes)
+    block
+
 
 
 
