--- a/Common.blocks/InputBlock/__InputField/InputBlock__InputField.scss
+++ b/Common.blocks/InputBlock/__InputField/InputBlock__InputField.scss
@@ -41,6 +41,7 @@
   line-height: 18px;
   margin-bottom: 17px;
   letter-spacing: -0.2px;
+  color: $DarkShade75;
   &:after {
    border: none;
    box-shadow: none;
