--- a/Common.blocks/InputBlock/__SelectArrow/InputBlock__SelectArrow.pug
+++ b/Common.blocks/InputBlock/__SelectArrow/InputBlock__SelectArrow.pug
@@ -1,2 +1,2 @@
 mixin InputBlock__SelectArrow(content)
-    i.InputBlock__SelectArrow&attributes(attributes) #{content}
+    i.material-icons.InputBlock__SelectArrow&attributes(attributes) #{content}
