--- a/pages/index.pug
+++ b/pages/index.pug
@@ -105,7 +105,7 @@ html
                             +InputBlock__FieldName('dropdown')
                             +InputBlock__FieldDescription('default')(class='InputBlock_PdTop_3px')
                         +InputBlock__SelectArrow('expand_more')
-                        Select.InputBlock__InputField.InputBlock_Appearan_none.InputBlock_PdTop_11px.InputBlock_LetterSpacing_0px.InputBlock_MrBot_21px.InputBlock_Color_Dark75
+                        Select.InputBlock__InputField.InputBlock_Appearan_none.InputBlock_PdTop_11px.InputBlock_LetterSpacing_0px.InputBlock_MrBot_19px.InputBlock_Color_Dark75
                             +InputBlock__Option('Сколько гостей', 'selected')
                             +InputBlock__Option()
                             +InputBlock__Option()               
@@ -119,7 +119,7 @@ html
                             +InputBlock__Wrapper()
                                 +InputBlock__FieldName('date dropdown')
                             +InputBlock__SelectArrow('expand_more')
-                            Select.InputBlock__InputField.InputBlock_Appearan_none.InputBlock_LetterSpacing_0px.InputBlock_MrBot_21px.InputBlock_Color_Dark75.InputBlock_Width_150px.InputBlock_PdTop_11px
+                            Select.InputBlock__InputField.InputBlock_Appearan_none.InputBlock_LetterSpacing_0px.InputBlock_Color_Dark75.InputBlock_Width_150px.InputBlock_PdTop_11px
                                 +InputBlock__Option('ДД.ММ.ГГГГ', 'selected')
                                 +InputBlock__Option()
                                 +InputBlock__Option()  
@@ -127,17 +127,16 @@ html
                             +InputBlock__Wrapper()
                                 +InputBlock__FieldName('date dropdown')
                             +InputBlock__SelectArrow('expand_more')
-                            Select.InputBlock__InputField.InputBlock_Appearan_none.InputBlock_MrBot_21px.InputBlock_Color_Dark75.InputBlock_Width_150px.InputBlock_PdTop_11px
+                            Select.InputBlock__InputField.InputBlock_Appearan_none.InputBlock_MrBot_19px.InputBlock_Color_Dark75.InputBlock_Width_150px.InputBlock_PdTop_11px.InputBlock_MrBot_37px
                                 +InputBlock__Option('19.08.2019', 'selected')
                                 +InputBlock__Option()
                                 +InputBlock__Option()
                     +InputBlock()
                         +InputBlock__Wrapper()
                             +InputBlock__FieldName('filter rate dropdown')
-                            +InputBlock__FieldDescription('default')(class='InputBlock_PdTop_3px')
                         +InputBlock__SelectArrow('expand_more')
-                        Select.InputBlock__InputField.InputBlock_Appearan_none.InputBlock_PdTop_11px.InputBlock_LetterSpacing_0px.InputBlock_MrBot_21px.InputBlock_Color_Dark75
-                            +InputBlock__Option('Сколько гостей', 'selected')
+                        Select.InputBlock__InputField.InputBlock_Width_266px.InputBlock_Appearan_none.InputBlock_PdTop_11px.InputBlock_LetterSpacing_0px.InputBlock_MrBot_19px.InputBlock_Color_Dark75
+                            +InputBlock__Option('19 авг - 23 авг', 'selected')
                             +InputBlock__Option()
                             +InputBlock__Option() 
                 +Wrapper()
