stable version webpack.config.js

--- a/Common.blocks/InputBlock/__Dropdown/InputBlock__Dropdown.pug
+++ b/Common.blocks/InputBlock/__Dropdown/InputBlock__Dropdown.pug
@@ -1,4 +1,2 @@
 mixin InputBlock__Dropdown(content)
-    div.InputBlock__Dropdown&attributes(attributes) #{content}
-        if block
-            block
+    select.InputBlock__Dropdown&attributes(attributes) #{content}
