--- a/Common.blocks/InputBlock/__Dropdown/InputBlock__Dropdown.scss
+++ b/Common.blocks/InputBlock/__Dropdown/InputBlock__Dropdown.scss
@@ -45,6 +45,8 @@
     margin-bottom: 17px;
     letter-spacing: -0.2px;
     background-color: transparent;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
     &:after {
      border: none;
      box-shadow: none;
